--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html" class="name">Arshita Mehta</a>
+        <a href="index.html" class="name">Arsh Mehta</a>
         <ul>    
             <li><a href="index.html" class="active">HOME</a></li>
             <li><a href="#">ABOUT</a></li>
