--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <img class="bgImg" src="images/mountains_behind.png" alt="">
     <img class="bgImg" src="images/mountains_front.png" alt="">
     <header>
-        <a href="index.html" class="name">Arshita Mehta</a>
+        <a href="index.html" class="name">Arsh Mehta</a>
         <ul>
             <li><a href="index.html" >HOME</a></li>
             <li><a href="#">ABOUT</a></li>
